feature/4 game list + redis +sidekiq + kaminari
